--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="keywords" content="coffeehouse, coffee, developers cafe, free wifi, dublin">
     <meta name="author" content="Coders Coffeehouse">
 
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/icon/favicon-16x16.png">
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Coders Coffeehouse</title>
